somewhat fixed bootstrap layout, however columns overlap

--- a/static/drawboard.css
+++ b/static/drawboard.css
@@ -81,6 +81,10 @@
     padding: 0px;
 }
 
+.col-md-2 {
+    background-color: #e3e3e3;
+}
+
 ul {
   padding: 0;
   margin: 0;
